# AURA-X

./: .env  README.md  docker-compose.yml
apps/academy_frontend/app/courses/: page.tsx
apps/academy_frontend/components/: CourseCard.tsx
apps/style_exchange_frontend/components/: StyleCard.tsx
daw/aura_daw_client/: CMakeLists.txt
daw/aura_daw_client/Source/: Main.cpp
daw/aura_daw_client/Source/GUI/Bridge/: AuraBridge.h
docs/: mcp_specification.md  productionization_protocol.md
services/ai_co_pilot/src/: main.py  vibe_engine.py
services/style_exchange_service/: knexfile.js
services/style_exchange_service/db/migrations/: 0001_create_initial_tables.js
services/style_exchange_service/src/services/: royaltyService.js
services/user_service/db/migrations/: 0001_create_users_table.js
services/user_service/src/controllers/: auth.controller.js
